fixed responsive design on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -217,6 +217,12 @@ body,
   display: flex;
 }
 
+@media (max-width: 600px) {
+  .card-container {
+    bottom: 100px;
+  }
+}
+
 .card-container[style*="--active: 1"] {
   opacity: 1;
   pointer-events: auto;
@@ -293,7 +299,7 @@ body,
     top: 0;
     left: 0;
     width: 100%;
-    height: 167%;
+    height: 170%;
     z-index: 10;
   }
 }
